
Copyright (c) 1998-2010 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.38.3 - February ??, 2010

    Removed the meta-predicate compilation safety rule that required the
    number of normal arguments to be equal or greater than the number of
    extra arguments required by a closure. This overly restrictive rule
    prevented the definition of useful and safe meta-predicates.

    Added index/1 directives for the predicate lookup caching predicates to
    the SWI-Prolog integration files (see "integration/logtalk_comp_swi.pl").
    These directives may or may not improve performance, depending on your
    application.

    Added meta-predicates sort/3 and msort/3 to the library object "list".
    These sorting predicates accept as first-argument a closure to be used
    for comparing pairs of list terms when sorting.

    Simplified usage of the "mtbatch" multi-threading benchmarks example
    by using conditional compilation directives for the Prolog-specific
    predicates instead of a parametric object.

    Update the Windows installer script in order to check for the new
    name of the SWI-Prolog executable (swipl-win.exe) when creating the
    integrations shortcuts.


2.38.2 - January 31, 2010

    Added support for calling :/1 goals using the <</2 control construct.

    Added support for calling non-redefined built-in predicates using the
    :/1 control construct.

    Corrected a Logtalk compiler bug (introduced in version 2.38.1) where
    redefinitions of Prolog built-in predicates would be ignored. Thanks
    to Parker Jones for the bug report.

    Simplified declaration and handling of proprietary directives with