@@ -392,7 +392,8 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 		</dl>
 		<dl>
 			<dt>category_identifier ::=</dt>
-				<dd><em>atom</em></dd>
+				<dd><em>atom</em> |</dd>
+				<dd><em>compound</em></dd>
 		</dl>
 		<dl>
 			<dt>category_identifier_sequence ::=</dt>
@@ -866,7 +867,7 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: December 7, 2009</span>
+		<span>Last updated on: February 17, 2010</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="index.html">previous</a> | <a href="../glossary.html">glossary</a> | <a href="index.html">next</a></span><br/>
