@@ -25,7 +25,7 @@
 
 <pre>parameter(Number, Term)</pre>
 <p>
-Normally used only in <a class="glossary" title="Go to glossary definition" href="../../glossary.html#parametric">parametric objects</a>, this method returns parameter values by using the parameter position in the object identifier. Note that this predicate implies an unification between its second argument and the corresponding implicit context argument in the predicate containing the call. This unification occurs at the clause head, not at the clause body. See also <a  href="this1.html"><code>this/1</code></a>.
+Used in <a class="glossary" title="Go to glossary definition" href="../../glossary.html#parametric">parametric objects</a> (or parametric categories), this method returns parameter values by using the parameter position in the object (category) identifier. Note that this predicate implies an unification between its second argument and the corresponding implicit context argument in the predicate containing the call. For parametric objects, this unification occurs at the clause head, not at the clause body. See also <a  href="this1.html"><code>this/1</code></a>.
 </p>
 
 <h4>Template and modes</h4>
@@ -63,7 +63,7 @@ Normally used only in <a class="glossary" title="Go to glossary definition" href
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: October 26, 2006</span>
+		<span>Last updated on: February 17, 2010</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="../index.html#methods">previous</a> | <a href="../../glossary.html">glossary</a> | <a href="self1.html">next</a></span><br/>
